--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,22 @@
 asgiref==3.3.1
 certifi==2020.12.5
 chardet==4.0.0
+dj-database-url==0.5.0
+dj-static==0.0.6
 Django==3.1.5
 django-environ==0.4.5
 docopt==0.6.2
 gitignore==0.0.8
+gunicorn==20.0.4
 idna==2.10
+psycopg2==2.8.6
 PyJWT==2.0.0
 python-dotenv==0.15.0
 pytz==2020.5
 requests==2.25.1
 six==1.15.0
 sqlparse==0.4.1
+static3==0.7.0
 twilio==6.50.1
 urllib3==1.26.2
+whitenoise==5.2.0
